baseline page structure

--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -7,6 +7,9 @@
 @import 'fonts';
 @import 'animations';
 
+@import 'base/global';
+@import 'base/typography';
+
 @import 'layout/page_header';
 @import 'layout/page_content';
 @import 'layout/page_footer';
