--- a/src/assets/_scss/layout/_page_header.scss
+++ b/src/assets/_scss/layout/_page_header.scss
@@ -2,6 +2,56 @@
 
 }
 
+.navbar-toggler {
+  display: block;
+  height: 45px;
+  width: 45px;
+  margin: 0;
+  background-color: transparent;
+  float: none;
+  z-index: 1000;
+  pointer-events: all;
+  text-align: center;
+  border: 0;
+  &:focus {
+    outline: 0;
+  }
+  &.collapsed {
+    .bar {
+      &.close-one {
+        transform: rotate(0);
+        margin-top: 10px;
+        margin-bottom: 0;
+      }
+      &.close-two {
+        transform: rotate(0);
+      }
+      &.close-three {
+        opacity: 1;
+      }
+    }
+  }
+  .bar {
+    background: $gray-700;
+    border-radius: 0;
+    display: block;
+    margin: 5px 0;
+    width: 20px;
+    height: 1px;
+    @include transition(.5s);
+    &.close-one {
+      transform: rotate(-45deg);
+      margin-top: 10px;
+      margin-bottom: -6px;
+    }
+    &.close-two {
+      transform: rotate(45deg);
+    }
+    &.close-three {
+      opacity: 0;
+    }
+  }
+}
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: $screen-sm-min) {}
