--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -5,29 +5,29 @@ layout: default
 <section id="project">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-12">
         <h1>{{ page.title }}</h1>
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-12">
         <p>Client: {{ page.client }}</p>
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col-12">
         <p>Summary: {{ page.summary }}</p>
       </div>
     </div>   
     <div class="row">
-      <div class="col">
+      <div class="col-12">
         <p>Situation:</p>{{ page.description.situation_html }}
         <p>Solution:</p>{{ page.description.solution_html }}
         <p>Results:</p>{{ page.description.results_html }}
       </div>
     </div>    
     <div class="row">
-      <div class="col">
+      <div class="col-12">
         {% for asset in page.gallery %}
           <div class="gallery-asset">
             <img src="{{ asset.image }}" alt="{{ asset.caption }}" class="img-fluid">
