--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,1 +1,41 @@
-<footer id="page-footer"></footer>
+<footer id="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="d-flex align-items-center justify-content-center">
+          <span>Time Zone</span>
+          <span>Time Zone</span>
+          <span>Time Zone</span>
+          <span>Time Zone</span>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+          <img src="https://via.placeholder.com/150x150?text=logo" class="img-fluid" alt="">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <div class="d-flex">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a href="#" class="nav-link">Link</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Link</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Link</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Link</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
