contact layout, default layout, expertise layout

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -6,6 +6,7 @@
     <main id="page-content">
       {{ content }}
     </main>
+    {% include testimonials.html %}
     {% include footer.html %}
     {% include scripts.html %}
   </body>
