--- a/src/assets/_scss/_custom_settings.scss
+++ b/src/assets/_scss/_custom_settings.scss
@@ -37,7 +37,8 @@ $body-bg:               $white;
 $body-color:            $dark;
 
 
-$font-family-base: 'Open Sans', sans-serif;
+$font-family-base: 'commuter sans', sans-serif;
+$font-family-secondary: 'berlingsky', serif;
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg:                ($font-size-base * 1.25) !default;
@@ -57,7 +58,7 @@ $h4-font-size:                $font-size-base * 1.5 !default;
 $h5-font-size:                $font-size-base * 1.25 !default;
 $h6-font-size:                $font-size-base !default;
 
-$headings-font-family:        'Open Sans', sans-serif;
+$headings-font-family:        $font-family-secondary;
 $headings-font-weight:        400;
 $headings-line-height:        1.2 !default;
 $headings-color:              inherit !default;
