Updated Service Worker and Added Application Manifest

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -25,4 +25,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
+
+  <!-- Web App Manifest -->
+  <link rel="manifest" href="/manifest.json">
 </head>
