--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -6,24 +6,35 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1>{{ page.title }}</h1>
+          <img src="https://via.placeholder.com/1280x900?text=logo" class="img-fluid" alt="{{ project.title }}">
       </div>
     </div>
     <div class="row">
       <div class="col-12">
-        <p>Client: {{ page.client }}</p>
+        <div class="content">
+          <h2>{{ page.title }}</h2>
+          <h3>{{ page.client }}</h3>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
-        <p>Summary: {{ page.summary }}</p>
+        <div class="content">
+          <div class="row">
+              <div class="col-xs-12 col-md-6">
+                {{ page.description.situation_html }}
+              </div>
+              <div class="col-xs-12 col-md-6">
+                {{ page.description.solution_html }}
+                {{ page.description.results_html }}
+              </div>
+          </div>
+        </div>
       </div>
-    </div>   
-    <div class="row">
       <div class="col-12">
-        <p>Situation:</p>{{ page.description.situation_html }}
-        <p>Solution:</p>{{ page.description.solution_html }}
-        <p>Results:</p>{{ page.description.results_html }}
+        <div class="content text-center">
+            <p>{% for tag in page.tags %}{{ tag  | capitalize }}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
+        </div>
       </div>
     </div>    
     <div class="row">
