--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -15,7 +15,7 @@
             <a class="nav-link{% if page.url == '/us' %} active{% endif %}" href="/us">Us {% if page.url == '/us/' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/expertise' %} active{% endif %}" href="/expertise">Expertise {% if page.url == '/expertise/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url == '/focus' %} active{% endif %}" href="/expertise">Focus {% if page.url == '/focus/' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link{% if page.url == '/work' %} active{% endif %}" href="/work">Work {% if page.url == '/work/' %}<span class="sr-only">(current)</span>{% endif %}</a>
