homepage layout and styles

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,38 +1,73 @@
-<footer id="page-footer">
+<section class="bg-gray-800">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="d-flex align-items-center justify-content-center">
-          <span>Time Zone</span>
-          <span>Time Zone</span>
-          <span>Time Zone</span>
-          <span>Time Zone</span>
+      
+      <div class="col-md-3">
+        <div class="content text-center">
+          <div class="bg-image aspect-1x1 rounded bg-light"></div>
+          <p>Honolulu</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="content text-center">
+          <div class="bg-image aspect-1x1 rounded bg-light"></div>
+          <p>Milwaukee</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="content text-center">
+          <div class="bg-image aspect-1x1 rounded bg-light"></div>
+          <p>Whistler</p>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="content">
+          <a href="/contact" class="quote">It's time to say hello</a>
         </div>
       </div>
     </div>
+  </div>
+</section>
+<footer id="page-footer">
+  <div class="container">
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <img src="https://via.placeholder.com/150x150?text=logo" class="img-fluid" alt="">
+          <img src="/assets/img/logo-horizontal.png" class="img-fluid logo-footer" alt="Ocupop Logo">
+          <img src="/assets/img/logo-horizontal-blue-orange.png" class="img-fluid logo-footer-hover" alt="Ocupop Logo">
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-2 ml-auto">
         <div class="content">
           <div class="d-flex">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a href="#" class="nav-link">Link</a>
+                <a href="/" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Link</a>
+                <a href="/about" class="nav-link">About</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Link</a>
+                <a href="/work" class="nav-link">Work</a>
+              </li>
+            </ul> 
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="content">
+          <div class="d-flex">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a href="/focus" class="nav-link">Focus</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Link</a>
+                <a href="/contact#careers" class="nav-link">Careers</a>
               </li>
-            </ul>
+              <li class="nav-item">
+                <a href="/contact" class="nav-link">Contact</a>
+              </li>
+            </ul> 
           </div>
         </div>
       </div>
