--- a/src/_includes/scripts.html
+++ b/src/_includes/scripts.html
@@ -11,15 +11,15 @@
   });
 </script>
 	<script>
-		if (navigator.serviceWorker) {
-			navigator.serviceWorker.register('/serviceworker.js')
-			.then( function (registration) {
-				console.log('ServiceWorker Loaded!', registration.scope);
-			})
-			.catch( function (error) {
-				console.error('Failure on SW', error);
-			});
-		}
+		// if (navigator.serviceWorker) {
+		// 	navigator.serviceWorker.register('/serviceworker.js')
+		// 	.then( function (registration) {
+		// 		console.log('ServiceWorker Loaded!', registration.scope);
+		// 	})
+		// 	.catch( function (error) {
+		// 		console.error('Failure on SW', error);
+		// 	});
+		// }
 	</script>
 
 <!-- Script for collapsing tab navigation on smaller screens, remove for your project if not needed -->
