--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -1,9 +1,10 @@
-<section class="bg-light">
+<section id="testimonials" class="bg-secondary text-white">
   <div class="container">
-    <div class="row">
+    <div class="row align-items-center">
       <div class="col-12">
         <div class="content text-center">
-          Testimonials section
+          <p class="quote">I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!”</p>
+          <p><small>Alyssa, Fox Tax Service</small></p>
         </div>
       </div>
     </div>
