--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="page-header">
   <div class="container">
-    <nav id="mainnav" class="navbar navbar-expand-md navbar-light">
-      <a class="navbar-brand" href="/">{{ site.title }}</a>
+    <nav id="mainnav" class="navbar navbar-expand-md">
+      <a class="navbar-brand" href="/"><img src="/assets/img/logo-horizontal.svg" class="img-fluid" alt="{{ site.title }}"></a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#primarynav" aria-controls="primarynav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="sr-only">Toggle navigation</span>
         <span class="bar close-one"></span>
@@ -12,16 +12,16 @@
       <div class="collapse navbar-collapse justify-content-md-end" id="primarynav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/us' %} active{% endif %}" href="/us">Us {% if page.url == '/us/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url == '/about/' %} active{% endif %}" href="/us">About {% if page.url == '/about/' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/expertise' %} active{% endif %}" href="/expertise">Expertise {% if page.url == '/expertise/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url == '/work/' %} active{% endif %}" href="/work">Work {% if page.url == '/work/' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/work' %} active{% endif %}" href="/work">Work {% if page.url == '/work/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url == '/focus/' %} active{% endif %}" href="/expertise">Expertise {% if page.url == '/focus/' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/contact' %} active{% endif %}" href="/contact">Contact {% if page.url == '/contact/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url == '/contact/' %} active{% endif %}" href="/contact">Contact {% if page.url == '/contact/' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
         </ul>
       </div>
