--- a/src/assets/_scss/_custom_settings.scss
+++ b/src/assets/_scss/_custom_settings.scss
@@ -7,24 +7,24 @@ $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
 $gray-500: #adb5bd !default;
 $gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
+$gray-700: #494949;
+$gray-800: #333333;
 $gray-900: #212529 !default;
 $black:    #000000 !default;
 
-$blue:    #25b0e8;
+$blue:    #67dce5;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
+$orange:  #ff9560;
 $yellow:  #f5C938;
 $green:   #87a63e;
 $teal:    #20c997 !default;
 $cyan:    #7dd0e8 !default;
 
 $primary:       $blue;
-$secondary:     #23405e;
+$secondary:     $orange;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -37,8 +37,9 @@ $body-bg:               $white;
 $body-color:            $dark;
 
 
-$font-family-base: 'commuter sans', sans-serif;
-$font-family-secondary: 'berlingsky', serif;
+$font-family-base: 'Berlingske Serif Regular', Georgia, serif;
+$font-family-secondary: 'commuters-sans', Helvetica, Arial, sans-serif;
+$font-family-secondary-bold: 'Berlingske Serif ExtraBold', Georgia, serif;
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
 $font-size-lg:                ($font-size-base * 1.25) !default;
