--- a/src/assets/_scss/layout/_page_header.scss
+++ b/src/assets/_scss/layout/_page_header.scss
@@ -1,5 +1,39 @@
 #page-header {
+}
 
+#mainnav {
+  .navbar-brand {
+    width: 190px;
+  }
+}
+
+#primarynav {
+  .nav-item {
+    padding-left: 20px;
+    padding-right: 20px;
+    .nav-link {
+      color: $dark;
+      position: relative;
+      overflow: hidden;
+      font-family: $font-family-secondary;
+      &::after {
+        content: '';
+        position: absolute;
+        display: block;
+        bottom: 0;
+        left: -100%;
+        width: 100%;
+        height: 2px;
+        background-color: $orange;
+        @include transition(.5s);
+      }
+      &:hover, &.active {
+        &::after {
+          left: 0;
+        }
+      }
+    }
+  }
 }
 
 .navbar-toggler {
