--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -14,3 +14,7 @@
 @import 'layout/page_content';
 @import 'layout/page_footer';
 
+@import 'elements/buttons';
+@import 'elements/quote';
+@import 'elements/testimonials';
+
