homepage layout and styles, global elements

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,28 +1,27 @@
-<section class="bg-gray-800">
+<section id="cta-contact" class="bg-gray-800 text-white">
   <div class="container">
-    <div class="row">
-      
-      <div class="col-md-3">
+    <div class="row align-items-end">
+      <div class="col-md-2">
         <div class="content text-center">
-          <div class="bg-image aspect-1x1 rounded bg-light"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/clock-honolulu.png)"></div>
           <p>Honolulu</p>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="content text-center">
-          <div class="bg-image aspect-1x1 rounded bg-light"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/clock-milwaukee.png)"></div>
           <p>Milwaukee</p>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="content text-center">
-          <div class="bg-image aspect-1x1 rounded bg-light"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/clock-whistler.png)"></div>
           <p>Whistler</p>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6">
         <div class="content">
-          <a href="/contact" class="quote">It's time to say hello</a>
+          <a href="/contact" class="quote arrow-right">It's time to say hello.</a>
         </div>
       </div>
     </div>
