--- a/src/assets/_scss/elements/_buttons.scss
+++ b/src/assets/_scss/elements/_buttons.scss
@@ -1,5 +1,6 @@
 .btn {
   font-family: $font-family-secondary;
+  letter-spacing: 1px;
   &.btn-inline {
     padding-left: 0;
     padding-right: 0;
