--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -15,6 +15,7 @@
 @import 'layout/page_footer';
 
 @import 'elements/buttons';
+@import 'elements/cta_contact';
 @import 'elements/quote';
 @import 'elements/testimonials';
 
