--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse justify-content-md-end" id="primarynav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/about/' %} active{% endif %}" href="/us">About {% if page.url == '/about/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url == '/about/' %} active{% endif %}" href="/about">About {% if page.url == '/about/' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
             <a class="nav-link{% if page.url == '/work/' %} active{% endif %}" href="/work">Work {% if page.url == '/work/' %}<span class="sr-only">(current)</span>{% endif %}</a>
