--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-12">
-        <div class="content text-center">
+        <div class="content">
           <p class="quote">I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!”</p>
-          <p><small>Alyssa, Fox Tax Service</small></p>
+          <p class="quote-author">Alyssa, Fox Tax Service</p>
         </div>
       </div>
     </div>
