--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -1,7 +1,9 @@
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-family: $font-family-base;
 }
 
 section {
-  padding: 50px 0;
+  padding: 75px 0;
 }
