--- a/src/assets/_scss/layout/_page_header.scss
+++ b/src/assets/_scss/layout/_page_header.scss
@@ -1,4 +1,5 @@
 #page-header {
+  border-top: 5px solid $blue;
 }
 
 #mainnav {
@@ -16,6 +17,7 @@
       position: relative;
       overflow: hidden;
       font-family: $font-family-secondary;
+      font-size: 15px;
       &::after {
         content: '';
         position: absolute;
@@ -91,10 +93,19 @@
 @media (min-width: $screen-sm-min) {}
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: $screen-md-min) {}
+@media (min-width: $screen-md-min) {
+  
+}
 
 // Large devices (desktops, 992px and up)
-@media (min-width: $screen-lg-min) {}
+@media (min-width: $screen-lg-min) {
+  #primarynav {
+    .nav-item {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+}
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: $screen-xl-min) {}
