--- a/src/assets/_scss/elements/_cta_contact.scss
+++ b/src/assets/_scss/elements/_cta_contact.scss
@@ -18,7 +18,7 @@
         position: absolute;
         right: 0;
         bottom: 12px;
-        background-image: url(/assets/img/arrow-right.png);
+        background-image: url('/assets/img/arrow-right.png');
         background-size: cover;
       }
     }
