--- a/src/assets/_scss/elements/_quote.scss
+++ b/src/assets/_scss/elements/_quote.scss
@@ -1,5 +1,5 @@
 .quote {
-  font-family: $font-family-secondary-bold;
+  font-family: $font-family-base-bold;
   font-size: 42px;
   font-weight: 800;
   line-height: 1.4;
