--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -1,10 +1,21 @@
-<section id="testimonials" class="bg-secondary text-white">
+<section id="testimonial" class="bg-secondary text-white">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-12">
-        <div class="content text-center">
-          <p class="quote">I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!”</p>
-          <p><small>Alyssa, Fox Tax Service</small></p>
+        <div class="content">
+          {% if page.testimonial %}
+            <p class="quote">&quot;{{ page.testimonial.quote }}&quot; <a href="/testimonials/" class="">Read more</a></p>
+            <p>
+              <span class="author">{{ page.testimonial.author }}</small><br>
+              <span class="title">{{ page.testimonial.title }}</small>
+            </p>
+          {% else %}
+            <p class="quote">I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!”</p>
+            <p>
+              <span class="author">Alyssa</small><br>
+              <span class="title">Founder, Fox Tax Service</small>
+            </p>
+          {% endif %}
         </div>
       </div>
     </div>
