--- a/src/assets/_scss/_custom_settings.scss
+++ b/src/assets/_scss/_custom_settings.scss
@@ -39,7 +39,7 @@ $body-color:            $dark;
 
 $font-family-base: 'Berlingske Serif Regular', Georgia, serif;
 $font-family-secondary: 'commuters-sans', Helvetica, Arial, sans-serif;
-$font-family-secondary-bold: 'Berlingske Serif ExtraBold', Georgia, serif;
+$font-family-base-bold: 'Berlingske Serif ExtraBold', Georgia, serif;
 
 $font-size-base:              1.3rem; // Assumes the browser default, typically `16px`
 $font-size-lg:                ($font-size-base * 1.25) !default;
