--- a/src/assets/_scss/elements/_testimonials.scss
+++ b/src/assets/_scss/elements/_testimonials.scss
@@ -1,7 +1,7 @@
 #testimonial {
   .quote {
     margin-bottom: 2rem;
-    font-family: $font-family-secondary-bold;
+    font-family: $font-family-base-bold;
   }
   .quote a {
     font-family: $font-family-base;
