--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -12,16 +12,16 @@
       <div class="collapse navbar-collapse justify-content-md-end" id="primarynav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/about/' %} active{% endif %}" href="/about">About {% if page.url == '/about/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url contains 'about' %} active{% endif %}" href="/about">About {% if page.url contains 'about' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/work/' %} active{% endif %}" href="/work">Work {% if page.url == '/work/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url contains 'work' %} active{% endif %}" href="/work">Work {% if page.url contains 'work' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/focus/' %} active{% endif %}" href="/expertise">Expertise {% if page.url == '/focus/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url contains 'focus' %} active{% endif %}" href="/focus">Focus {% if page.url contains 'focus' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link{% if page.url == '/contact/' %} active{% endif %}" href="/contact">Contact {% if page.url == '/contact/' %}<span class="sr-only">(current)</span>{% endif %}</a>
+            <a class="nav-link{% if page.url contains 'contact' %} active{% endif %}" href="/contact">Contact {% if page.url contains 'contact' %}<span class="sr-only">(current)</span>{% endif %}</a>
           </li>
         </ul>
       </div>
