--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -9,10 +9,15 @@ section {
 }
 
 dl {
+  font-size: 16px;
   dt {
     font-family: $font-family-secondary;
     text-transform: uppercase;
     margin: 5px 0;
+    font-family: $font-family-secondary;
+    font-weight: 300;
+    color: $gray-500;
+    letter-spacing: 1px;
   }
 
   dd {
