--- a/src/assets/_scss/base/_typography.scss
+++ b/src/assets/_scss/base/_typography.scss
@@ -2,3 +2,9 @@
   font-size: 1.75rem;
   font-weight: 600;
 }
+
+h4 {
+  font-family: $font-family-secondary;
+  color: $gray-500;
+  font-weight: 300;
+}
