--- a/src/_includes/testimonials.html
+++ b/src/_includes/testimonials.html
@@ -10,7 +10,7 @@
               <span class="title">{{ page.testimonial.title }}</small>
             </p>
           {% else %}
-            <p class="quote">I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!”</p>
+            <p class="quote">&quot;I get complimented on our website and materials constantly. In fact, I always joke that if Ocupop hadn’t done such a great job with our design I wouldn’t be so busy all the time!&quot; <a href="/testimonials/" class="">Read more</a></p>
             <p>
               <span class="author">Alyssa</small><br>
               <span class="title">Founder, Fox Tax Service</small>
