--- a/src/_layouts/focus.html
+++ b/src/_layouts/focus.html
@@ -2,12 +2,26 @@
 layout: default
 ---
 
-<section>
+<section id="focus">
   <div class="container">
     <div class="row">
       <div class="col-12">
-          <h1>{{ page.title }}</h1>
+        <h1>{{ page.title }}</h1>
+        {{ page.summary }}
       </div>
+    </div>
+    <hr class="my-5">
+
+    <div id="projectList" class="row">
+      {% for project in page.projects %}
+        <div class="col-xs-12 col-lg-6 mb-5">
+          <img src="{{ project.gallery[0].image | default: site.placeholders.aspect-4x3 }}" class="img-fluid" alt="{{ project.title }}">
+          <h2 class="mt-4">{{ project.title }}</h2>
+          <p>{{ project.summary }}</p>
+          <a href="{{ project.url }}" class="btn btn-inline">Learn more...</a>
+        </div>
+      {% endfor %}
     </div>
   </div>
 </section>
+  
