--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -58,6 +58,9 @@
 
 
 // Color Utilities
+.bg-black {
+  background-color: $black !important;
+}
 .bg-gray-800 {
   background-color: $gray-800;
 }
@@ -72,4 +75,10 @@
   position: relative;
   width: 100vw;
   height: 100vh;
+}
+
+
+// Text Utilities
+.text-sans-serif {
+  font-family: $font-family-secondary;
 }
