--- a/src/assets/_scss/elements/_testimonials.scss
+++ b/src/assets/_scss/elements/_testimonials.scss
@@ -12,9 +12,11 @@
   .author {
     font-family: $font-family-secondary;
     font-weight: 600;
+    text-transform: uppercase;
   }
   .title {
     font-family: $font-family-secondary;
     font-weight: 400;
+    text-transform: uppercase;
   }
 }
