--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -2,10 +2,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: $font-family-base;
+  line-height: 1.5;
 }
 
 section {
   padding: 75px 0;
+}
+
+hr {
+  border-color: $primary;
 }
 
 dl {
