--- a/src/assets/_scss/elements/_quote.scss
+++ b/src/assets/_scss/elements/_quote.scss
@@ -1,6 +1,6 @@
 .quote {
   font-family: $font-family-base-bold;
-  font-size: 42px;
+  font-size: 2.5rem;
   font-weight: 800;
   line-height: 1.4;
   margin-bottom: 0;
