--- a/src/assets/_scss/_utilities.scss
+++ b/src/assets/_scss/_utilities.scss
@@ -82,3 +82,9 @@
 .text-sans-serif {
   font-family: $font-family-secondary;
 }
+
+
+.text-mega {
+  font-size: calc(28px + (88 - 28) * ((100vw - 300px) / (1440 - 300)));
+  line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px)/(1440 - 300)));
+}
