--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body class="{{ page.layout }}">
+  <body class="{{ page.layout }} loading">
     {% include header.html %}
     <main id="page-content">
       {{ content }}
