--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -2,50 +2,31 @@
 layout: default
 ---
 
-<section id="project">
+<div class="bg-image aspect-hero" style="background-image: url({{ page.hero_image | default: site.placeholders.hero }})"></div>
+<section id="project" class="pb-0">
   <div class="container">
     <div class="row">
-      <div class="col-12">
-          <img src="https://via.placeholder.com/1280x900?text=logo" class="img-fluid" alt="{{ project.title }}">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
+      <div class="col-md-6">
         <div class="content">
           <h2>{{ page.title }}</h2>
           <h3>{{ page.client }}</h3>
         </div>
       </div>
+      <div class="col-md-6">
+        <div class="project-tags content">
+          <p>{% for tag in page.tags %}<span {% unless forloop.last %}class="dotted"{% endunless %}>{{ tag  | capitalize }}</span>{% endfor %}</p>
+        </div>
+      </div>
     </div>
     <div class="row">
-      <div class="col-12">
+      <div class="col">
         <div class="content">
-          <div class="row">
-              <div class="col-xs-12 col-md-6">
-                {{ page.description.situation_html }}
-              </div>
-              <div class="col-xs-12 col-md-6">
-                {{ page.description.solution_html }}
-                {{ page.description.results_html }}
-              </div>
-          </div>
+          <hr>
         </div>
-      </div>
-      <div class="col-12">
-        <div class="content text-center">
-            <p>{% for tag in page.tags %}{{ tag  | capitalize }}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
-        </div>
-      </div>
-    </div>    
-    <div class="row">
-      <div class="col-12">
-        {% for asset in page.gallery %}
-          <div class="gallery-asset">
-            <img src="{{ asset.image }}" alt="{{ asset.caption }}" class="img-fluid">
-            <p>{{ asset.caption }}</p>
-          </div> 
-        {% endfor %} 
       </div>
     </div>
   </div>
 </section>
+
+{{ page.content }}
+{% include related-projects.html %}
