--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -2,6 +2,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: $font-family-base;
+  font-size: 20px;
 }
 
 section {
@@ -23,4 +24,8 @@ dl {
   dd {
 
   }
+}
+
+hr {
+  border-top: 1px solid $primary;
 }
