--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -14,8 +14,15 @@
 @import 'layout/page_content';
 @import 'layout/page_footer';
 
+
+// Import element specific styles
 @import 'elements/buttons';
 @import 'elements/cta_contact';
 @import 'elements/quote';
 @import 'elements/testimonials';
+
+// Import view specific styles
+@import 'views/project';
+
+
 
