--- a/src/assets/_scss/_animations.scss
+++ b/src/assets/_scss/_animations.scss
@@ -24,6 +24,21 @@
   }
 }
 
+// CARD SLIDE IN
+@keyframes sectionSlideDown {
+  from {
+    opacity: 1;
+    transform: translate3d(0, -30%, 0);
+    visibility: visible;
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+
 .card {
     // Loop through the cards and delay the loading animation.
   @for $i from 1 through 20 {
