--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -2,30 +2,17 @@
 layout: default
 ---
 {% assign project = page %}
-<section class="bg-dark">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-
-      </div>
-    </div>
-  </div>
-</section>
-
+<div class="bg-image aspect-hero" style="background-image:url({{ page.hero_image | default: site.placeholders.hero }})"></div>
 <section id="project">
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h4>{{ project.client }}</h4>
-        <h1>{{ project.title }}</h1>
-        <p class="text-sans-serif text-uppercase">
-          {% for tag in project.tags %}{{ tag }}&nbsp;{% unless forloop.last %}&dot;{% endunless %}&nbsp;{% endfor %}
-        </p>
-        <hr>
-      </div>
-      <div class="col-md-6">
-        <div class="project-tags content">
-          <p>{% for tag in page.tags %}<span {% unless forloop.last %}class="dotted"{% endunless %}>{{ tag  | capitalize }}</span>{% endfor %}</p>
+        <div class="content">
+          <h2>{{ project.client }}</h2>
+          <h3>{{ project.title }}</h3>
+          <div class="project-tags">
+            <p>{% for tag in page.tags %}<span {% unless forloop.last %}class="dotted"{% endunless %}>{{ tag  | capitalize }}</span>{% endfor %}</p>
+          </div>
         </div>
       </div>
     </div>
