add font references

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -23,8 +23,8 @@
   <!-- Fav and Touch Icons -->
   <link rel="icon" type="image/png" href="/favicon.png">
 
-  <!-- <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-031559-2b8cdb5c18c2686f822711d4a431fccf.css" type="text/css"/>
-  <link rel="stylesheet" href="https://use.typekit.net/wzw6yzl.css"> -->
+  <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-031559-2b8cdb5c18c2686f822711d4a431fccf.css" type="text/css"/>
+  <link rel="stylesheet" href="https://use.typekit.net/wzw6yzl.css">
   <!-- CSS -->
   <link rel="stylesheet" href="{{ '/assets/css/vendor/animate.css' | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
