add bittercube project page layout and assets

--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% assign project = page %}
 <div class="bg-image aspect-hero" style="background-image:url({{ page.hero_image | default: site.placeholders.hero }})"></div>
-<section id="project">
+<section id="project" class="pb-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
