--- a/src/assets/_scss/_custom_settings.scss
+++ b/src/assets/_scss/_custom_settings.scss
@@ -22,6 +22,7 @@ $yellow:  #f5c938;
 $green:   #87a63e;
 $teal:    #20c997 !default;
 $cyan:    #7dd0e8 !default;
+$navy:    #18374b;
 
 $primary:       $blue;
 $secondary:     $orange;
