About page image paths, homepage image paths, prototype logo animation for homepage

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -3,19 +3,19 @@
     <div class="row align-items-end">
       <div class="col-md-2">
         <div class="content text-center">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/clock-honolulu.png)"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/Honolulu.png)"></div>
           <p>Honolulu</p>
         </div>
       </div>
       <div class="col-md-2">
         <div class="content text-center">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/clock-milwaukee.png)"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/Milwaukee.png)"></div>
           <p>Milwaukee</p>
         </div>
       </div>
       <div class="col-md-2">
         <div class="content text-center">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/clock-whistler.png)"></div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/Whistler.png)"></div>
           <p>Whistler</p>
         </div>
       </div>
@@ -32,8 +32,10 @@
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <img src="/assets/img/logo-horizontal.png" class="img-fluid logo-footer" alt="Ocupop Logo">
-          <img src="/assets/img/logo-horizontal-blue-orange.png" class="img-fluid logo-footer-hover" alt="Ocupop Logo">
+          <a href="/">
+            <img src="assets/img/ocupop_footer_logo_grey.png" class="img-fluid logo-footer" alt="Ocupop Logo">
+            <img src="assets/img/ocupop_footer_logo_color.png" class="img-fluid logo-footer-hover" alt="Ocupop Logo">
+          </a> 
         </div>
       </div>
       <div class="col-md-2 ml-auto">
