--- a/src/_includes/transition.html
+++ b/src/_includes/transition.html
@@ -1,7 +1,7 @@
 <section id="transition" class="bg-primary full">
   <div class="d-flex h-100 justify-content-center align-items-center">
     <div id="logo-block" class="block w-50 h-50">
-      {% include svg/logo-vertical.svg %}
+      {% include svg/logo-animate.svg %}
     </div>
     <div id="quote-block" class="block">
       <h1 class="text-mega text-white text-center">"I've never felt more alive!"</h1>
