--- a/src/assets/_scss/views/_home.scss
+++ b/src/assets/_scss/views/_home.scss
@@ -4,4 +4,11 @@
   justify-content: space-between;
   margin-top: 30px;
   margin-bottom: 30px;
+  @include media-breakpoint-down(md) {
+    flex-wrap: wrap;
+    img {
+      padding: 20px;
+      max-width: 50%;
+    }
+  }
 }
