--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,7 +5,7 @@
     {% include header.html %}
     <main id="page-content">
       <div id="barba-wrapper">
-        <div class="barba-container">{{ content }}</div>
+        <div class="barba-container" data-namespace="page">{{ content }}</div>
       </div>
     </main>
     {% include testimonials.html %} {% include footer-bar.html %} {% include
