--- a/src/assets/_scss/_animations.scss
+++ b/src/assets/_scss/_animations.scss
@@ -1,12 +1,12 @@
 @keyframes iconZoomIn {
   from {
     opacity: 0;
-    transform: scale3d(20.0, 20.0, 20.0) translate3d(0, 100%, 0);
+    transform: scale3d(20, 20, 20) translate3d(0, 100%, 0);
   }
 
   to {
     opacity: 1;
-    transform: scale3d(1.0, 1.0, 1.0) translate3d(0, 0, 0);
+    transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
   }
 }
 
@@ -24,7 +24,7 @@
   }
 }
 
-// CARD SLIDE IN
+// Section Slide Down
 @keyframes sectionSlideDown {
   from {
     opacity: 1;
@@ -38,12 +38,11 @@
   }
 }
 
-
 .card {
-    // Loop through the cards and delay the loading animation.
+  // Loop through the cards and delay the loading animation.
   @for $i from 1 through 20 {
     &:nth-child(#{$i}) {
-      @include animation(cardSlideIn, .8s, .1s * $i);
+      @include animation(cardSlideIn, 0.8s, 0.1s * $i);
     }
   }
 }
