--- a/src/assets/_scss/layout/_page_content.scss
+++ b/src/assets/_scss/layout/_page_content.scss
@@ -1,15 +1,19 @@
 #page-content {
+  padding-top: 77px;
 }
 
-
 // Small devices (landscape phones, 576px and up)
-@media (min-width: $screen-sm-min) {}
+@media (min-width: $screen-sm-min) {
+}
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: $screen-md-min) {}
+@media (min-width: $screen-md-min) {
+}
 
 // Large devices (desktops, 992px and up)
-@media (min-width: $screen-lg-min) {}
+@media (min-width: $screen-lg-min) {
+}
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: $screen-xl-min) {}
+@media (min-width: $screen-xl-min) {
+}
