--- a/src/assets/_scss/elements/_cognito.scss
+++ b/src/assets/_scss/elements/_cognito.scss
@@ -9,7 +9,9 @@
     .c-editor {
       font-family: $font-family-secondary !important;
       padding-left: 0;
-      font-weight: normal !important;
+      color: $dark !important;
+      font-size: 14px !important;
+      text-transform: uppercase;
     }
     .c-title {
       padding: 0;
