--- a/src/assets/_scss/elements/_cognito.scss
+++ b/src/assets/_scss/elements/_cognito.scss
@@ -32,6 +32,12 @@
       border: 1px solid $dark;
       padding: 8px;
     }
+    .c-dropdown {
+      select {
+        border: 1px solid $dark;
+        padding: 8px;
+      }
+    }
     .c-validation {
       border-radius: 0;
       margin: 0 8px 0 0;
@@ -40,17 +46,14 @@
     .c-forms-confirmation {
       text-align: center;
       background-color: transparent;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border: 1px solid $dark;
       min-height: 0;
-      padding: 30px;
     }
     .c-forms-confirmation-message {
       color: $dark !important;
       font-family: $font-family-base-bold !important;
       font-size: 25px !important;
+      border: 1px solid $dark;
+      width: 100%;
     }
   }
   #c-submit-button {
