message strategy page

--- a/src/_includes/message-strategy/header.html
+++ b/src/_includes/message-strategy/header.html
@@ -1,5 +1,5 @@
 <header id="strategy-header" class="navbar bg-dark">
-  <a class="navbar-brand mr-0 mr-md-2 cc-active" href="/">
+  <div class="navbar-brand mr-0 mr-md-2 cc-active">
     {% include svg/logo-horizontal.svg %}
-  </a>
+  </div>
 </header>
