--- a/src/assets/_scss/views/_message_strategy.scss
+++ b/src/assets/_scss/views/_message_strategy.scss
@@ -3,3 +3,14 @@
     width: 150px;
   }
 }
+
+#strategy-footer {
+  background-color: $dark;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 160px;
+  img {
+    width: 190px;
+  }
+}
