added above the fold option for mosaic

--- a/src/_includes/footer-bar.html
+++ b/src/_includes/footer-bar.html
@@ -1,1 +1,16 @@
-<div class="footer-bar"></div>
+<div class="footer-bar">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="consent">
+          <p class="small text-white mt-2">
+            Our site uses cookies to personalize content, to provide social
+            media features and to analyze traffic.
+            <a href="#" class="btn btn-primary btn-sm">This is acceptable</a>
+            <a href="/privacy" class="text-white btn btn-outline-light btn-sm">More Details</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
