--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -8,7 +8,9 @@
         <main id="page-content">{{ content }}</main>
       </div>
     </div>
-    {% include testimonials.html %} {% include footer-bar.html %} {% include
-    footer.html %} {% include scripts.html %}
+    {% include testimonials.html %}
+    {% include footer-bar.html %}
+    {% include footer.html %}
+    {% include scripts.html %}
   </body>
 </html>
