--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -3,7 +3,11 @@
   <meta property="og:description" content="{{ site.description }}" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="{{ page.url | absolute_url }}" />
-  {% if page.layout != "post" %}<meta property="og:image" content="{{ 'assets/img/xxx.png' | absolute_url }}" />{% else %}<meta property="og:image" content="{{ page.featured_image_path  | absolute_url  }}" />{% endif %}
+  {% if page.layout != "post" %}
+  <meta property="og:image" content="{{ 'assets/img/xxx.png' | absolute_url }}"/>
+  {% else %}
+  <meta property="og:image" content="{{ page.featured_image_path  | absolute_url  }}"/>
+  {% endif %}
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -14,23 +18,26 @@
   <meta name="twitter:title" content="Ocupop" />
   <meta name="twitter:description" content="{{ page.title }}" />
   <meta name="twitter:text:description" content="{{ site.description }}" />
-  {% if page.layout != "post" %}<meta name="twitter:image" content="{{ 'assets/img/xxx.png' | absolute_url }}" />{% else %}<meta name="twitter:image" content="{{ page.featured_image_path  | absolute_url  }}" />{% endif %}
+  {% if page.layout != "post" %}
+  <meta name="twitter:image" content="{{ 'assets/img/xxx.png' | absolute_url }}"/>
+  {% else %}
+  <meta name="twitter:image" content="{{ page.featured_image_path  | absolute_url  }}"/>
+  {% endif %}
   <meta name="twitter:image:alt" content="Ocupop" />
-  
-   <!-- Adding feed.xml: https://github.com/jekyll/jekyll-feed -->
+
+  <!-- Adding feed.xml: https://github.com/jekyll/jekyll-feed -->
   {% feed_meta %}
 
   <!-- Fav and Touch Icons -->
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="/favicon.png" />
 
   <link rel="stylesheet" href="https://webfonts.fontstand.com/WF-031559-2b8cdb5c18c2686f822711d4a431fccf.css" type="text/css"/>
-  <link rel="stylesheet" href="https://use.typekit.net/wzw6yzl.css">
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ '/assets/css/vendor/animate.css' | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}">
-  
-  <!-- <script src="{{ '/assets/js/head.js' | prepend: site.baseurl }}"></script> -->
+  <link rel="stylesheet" href="{{ '/assets/css/vendor/animate.css' | prepend: site.baseurl }}"/>
+  <link rel="stylesheet" href="{{ '/assets/css/main.css' | prepend: site.baseurl }}"/>
+
+  <script src="{{ '/assets/js/head.js' | prepend: site.baseurl }}"></script>
 
   <!-- Web App Manifest -->
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="/manifest.json" />
 </head>
