--- a/src/assets/_scss/layout/_page_footer.scss
+++ b/src/assets/_scss/layout/_page_footer.scss
@@ -23,20 +23,8 @@
   top: 20px;
   left: 20px;
   opacity: 0;
-  @include transition(.5s);
+  @include transition(0.5s);
   &:hover {
     opacity: 1;
   }
 }
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: $screen-sm-min) {}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: $screen-md-min) {}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: $screen-lg-min) {}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: $screen-xl-min) {}
