--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -21,6 +21,9 @@
 @import "elements/quote";
 @import "elements/testimonials";
 
+// Components
+@import "components/mosaic";
+
 // Import view specific styles
 @import "views/home";
 @import "views/home_animation";
