--- a/src/assets/_scss/views/_home_animation.scss
+++ b/src/assets/_scss/views/_home_animation.scss
@@ -1,5 +1,3 @@
-
-
 .cls-1 {
   stroke-dasharray: 1000;
   stroke-dashoffset: 1000;
@@ -16,48 +14,54 @@
   fill-opacity: 0;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
-  animation-iteration: 1;
-  
+  animation-iteration-count: 1;
   animation-name: DrawLine, FadeStroke, FillIn, bounceOutUp;
   animation-duration: 4s, 1s, 1s, 1.2s;
   animation-delay: 0s, 3.5s, 3.5s, 4.5s;
 }
 
 #draw-mark {
-  stroke-dashArray: 1100;
-  stroke-dashoffset: 1100; 
+  stroke-dasharray: 1100;
+  stroke-dashoffset: 1100;
 }
 
-#draw-frame { 
-  animation-delay: 0, 3.5s, 3.5s; 
-  animation-duration: 3.5s, 1s, 1s; 
-  stroke-dashArray: 1500;
+#draw-frame {
+  animation-delay: 0, 3.5s, 3.5s;
+  animation-duration: 3.5s, 1s, 1s;
+  stroke-dasharray: 1500;
   stroke-dashoffset: 1500;
 }
 
-#draw-text { 
-  animation-delay: 2s, 3.5s, 3.5s; 
-  animation-duration: 2s, 1s, 1s; 
-  stroke-dashArray: 300;
+#draw-text {
+  animation-delay: 2s, 3.5s, 3.5s;
+  animation-duration: 2s, 1s, 1s;
+  stroke-dasharray: 300;
   stroke-dashoffset: 300;
-  
+
   path {
     animation: Drawline;
   }
-  
+
   //animation-duration: 4s;
 }
 
 @keyframes DrawLine {
-  to { stroke-dashOffset: 0; }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 @keyframes FadeStroke {
-  to { stroke-opacity: 0; }
+  to {
+    stroke-opacity: 0;
+  }
 }
 
 @keyframes FillIn {
-  from { fill-opacity: 0; }
-  to { fill-opacity: 1; }
-} 
-
+  from {
+    fill-opacity: 0;
+  }
+  to {
+    fill-opacity: 1;
+  }
+}
