--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
-  <body class="{{ page.layout }} loading">
+  <body class="{{ page.layout }}">
     <div id="barba-wrapper">
       <div class="barba-container" data-namespace="{{ page.title | slugify }}">
         {% include header.html %}
