--- a/src/_layouts/message-strategy.html
+++ b/src/_layouts/message-strategy.html
@@ -6,7 +6,8 @@
       <div class="barba-container" data-namespace="{{ page.title | slugify }}">
         {% include message-strategy/header.html %}
         <main id="page-content">{{ content }}</main>
-        {% include message-strategy/footer.html %} {% include scripts.html %}
+        {% include message-strategy/footer.html %}
+        {% include scripts.html %}
       </div>
     </div>
   </body>
