--- a/src/assets/_scss/layout/_page_content.scss
+++ b/src/assets/_scss/layout/_page_content.scss
@@ -1,5 +1,6 @@
 #page-content {
   padding-top: 77px;
+  @include animation(fadeIn, 1.25s, .4s);
 }
 
 // Small devices (landscape phones, 576px and up)
