--- a/src/assets/_scss/_animations.scss
+++ b/src/assets/_scss/_animations.scss
@@ -38,6 +38,30 @@
   }
 }
 
+//Page intro slide Open
+@keyframes slideOpen {
+  from {
+    height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  to {
+    height: auto;
+    padding-top: 75px;
+    padding-bottom: 75px;
+  }
+}
+
+//fade in
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .card {
   // Loop through the cards and delay the loading animation.
   @for $i from 1 through 20 {
