--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -12,6 +12,7 @@
 
 @import "layout/page_header";
 @import "layout/page_content";
+@import "layout/page_intro";
 @import "layout/page_footer";
 
 // Import element specific styles
@@ -29,3 +30,4 @@
 @import "views/project";
 
 // @import "elements/transitions";
+@import "elements/page_transition";
