consent footer bar styles

--- a/src/_includes/footer-bar.html
+++ b/src/_includes/footer-bar.html
@@ -3,11 +3,13 @@
     <div class="row">
       <div class="col-12">
         <div class="consent">
-          <p class="small text-white mt-2">
+          <p class="text-white mt-2 mb-1">
             Our site uses cookies to personalize content, to provide social
             media features and to analyze traffic.
-            <a href="#" class="btn btn-primary btn-sm">This is acceptable</a>
-            <a href="/privacy" class="text-white btn btn-outline-light btn-sm">More Details</a>
+          </p>
+          <p class="text-center mb-2">
+            <a href="/privacy" class="text-white btn btn-inline btn-sm">More Details</a>
+            <a href="#" class="btn btn-outline-light btn-sm">This is acceptable</a>
           </p>
         </div>
       </div>
