--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -20,6 +20,7 @@
 @import "elements/cta_contact";
 @import "elements/cognito";
 @import "elements/footer_bar";
+@import "elements/project_transition";
 @import "elements/quote";
 @import "elements/testimonials";
 
