--- a/src/assets/_scss/_animations.scss
+++ b/src/assets/_scss/_animations.scss
@@ -62,6 +62,23 @@
   }
 }
 
+@keyframes expandFullScreen {
+  from {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+  }
+  to {
+    position: fixed;
+    z-index: 997;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+  }
+}
+
 .card {
   // Loop through the cards and delay the loading animation.
   @for $i from 1 through 20 {
