project transition prototype

--- a/src/assets/_scss/elements/_project_transition.scss
+++ b/src/assets/_scss/elements/_project_transition.scss
@@ -3,4 +3,11 @@
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
+  z-index: 1001;
 }
+
+// .project {
+//   #page-content {
+//     animation-delay: 2.2s;
+//   }
+// }
