--- a/src/assets/_scss/main.scss
+++ b/src/assets/_scss/main.scss
@@ -32,6 +32,7 @@
 @import "views/home_animation";
 @import "views/message_strategy";
 @import "views/project";
+@import "views/work";
 
 // @import "elements/transitions";
 @import "elements/page_transition";
