--- a/src/_layouts/project.html
+++ b/src/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% assign project = page %}
 <div id="project-hero" class="bg-image aspect-hero" style="background-image:url({{ page.hero_image | default: site.placeholders.hero }})"></div>
-<section id="project" class="pb-0">
+<section id="project" class="pb-0 project-content">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -27,5 +27,10 @@ layout: default
   </div>
 </section>
 
-{{ page.content }}
-{% include related-projects.html %}
+<div class="project-content">
+  {{ page.content }}
+</div>
+<div class="project-content">
+  {% include related-projects.html %}
+</div>
+
