--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -32,13 +32,13 @@
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <a href="/">
-            <img src="/assets/img/ocupop_footer_logo_grey.png" class="img-fluid logo-footer" alt="Ocupop Logo">
-            <img src="/assets/img/ocupop_footer_logo_color.png" class="img-fluid logo-footer-hover" alt="Ocupop Logo">
+          <a href="/" class="logo-footer">
+            <img src="/assets/img/ocupop_footer_logo_grey.png" class="img-fluid" alt="Ocupop Logo">
+            <img src="/assets/img/ocupop_footer_logo_color.png" class="img-fluid" alt="Ocupop Logo">
           </a> 
         </div>
       </div>
-      <div class="col-md-2 ml-auto">
+      <div class="col-6 col-md-2 ml-auto">
         <div class="content">
           <div class="d-flex">
             <ul class="nav flex-column">
@@ -55,7 +55,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-6 col-md-2">
         <div class="content">
           <div class="d-flex">
             <ul class="nav flex-column">
