--- a/src/assets/_scss/base/_global.scss
+++ b/src/assets/_scss/base/_global.scss
@@ -2,12 +2,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: $font-family-base;
-  font-size: 20px;
   line-height: 1.5;
+  @include media-breakpoint-down(md) {
+    font-size: 1rem;
+    line-height: 1.3;
+  }
 }
 
 section {
-  padding: 75px 0;
+  padding: 25px 0;
+  @include media-breakpoint-up(lg) {
+    padding: 75px 0;
+  } 
 }
 
 hr {
