--- a/src/assets/_scss/elements/_footer_bar.scss
+++ b/src/assets/_scss/elements/_footer_bar.scss
@@ -7,12 +7,19 @@
   height: auto;
   min-height: 4px;
   background-color: $orange;
+  z-index: 998;
 }
 
 .consent {
   text-align: center;
-  font-size: 16px;
-  .btn {
+  font-size: 12px;
+  @include media-breakpoint-up(md) {
     font-size: 14px;
+  }
+  .btn {
+    font-size: 10px;
+    @include media-breakpoint-up(md) {
+      font-size: 12px;
+    }
   }
 }
