--- a/src/assets/_scss/layout/_page_header.scss
+++ b/src/assets/_scss/layout/_page_header.scss
@@ -18,6 +18,10 @@
   .nav-item {
     padding-left: 20px;
     padding-right: 20px;
+    @include media-breakpoint-up(lg) {
+      padding-right: 40px;
+      padding-left: 40px;
+    }
     .nav-link {
       color: $dark;
       position: relative;
@@ -94,26 +98,4 @@
       opacity: 0;
     }
   }
-}
-
-// Small devices (landscape phones, 576px and up)
-@media (min-width: $screen-sm-min) {
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: $screen-md-min) {
-}
-
-// Large devices (desktops, 992px and up)
-@media (min-width: $screen-lg-min) {
-  #primarynav {
-    .nav-item {
-      padding-left: 40px;
-      padding-right: 40px;
-    }
-  }
-}
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: $screen-xl-min) {
 }
